# Poatato-Slam

./: ICP配准（一）
02-作业/devel/: .catkin  local_setup.sh
02-作业/src/test_ros/: CMakeLists.txt  readme.md
02-作业/src/test_ros/include/: icp.hpp
02-作业/src/test_ros/src/: icp.cpp  msg_communication.cpp
